fixed text wrapping on likes on Post

--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -67,9 +67,10 @@
 		grid-area: footer;
 
 		display: grid;
-		grid: 1fr / repeat(7, 1fr);
-		grid-template-areas: 'likes  likes comments comments comments icons icons';
+		grid: 1fr / auto auto 1fr;
+		grid-template-areas: 'likes comments icons';
 		place-items: end start;
+		gap: 1rem;
 
 		width: 100%;
 		height: 100%;
@@ -158,6 +159,7 @@
 		display: flex;
 		flex: none;
 		justify-content: space-around;
+		max-width: 150px;
 
 		button,
 		a {
